--- a/src/styles/pretendard.css
+++ b/src/styles/pretendard.css
@@ -1,7 +1,6 @@
 @font-face {
   font-family: 'Pretendard';
-  src:
-    local('Pretendard-Thin'),
+  src: local('Pretendard-Thin'),
     url('/assets/font/Pretendard-Thin.woff2') format('woff2'),
     url('/assets/font/Pretendard-Thin.woff') format('woff');
   font-weight: 100;
@@ -10,8 +9,7 @@
 
 @font-face {
   font-family: 'Pretendard';
-  src:
-    local('Pretendard-ExtraLight'),
+  src: local('Pretendard-ExtraLight'),
     url('/assets/font/Pretendard-ExtraLight.woff2') format('woff2'),
     url('/assets/font/Pretendard-ExtraLight.woff') format('woff');
   font-weight: 200;
@@ -20,8 +18,7 @@
 
 @font-face {
   font-family: 'Pretendard';
-  src:
-    local('Pretendard-Light'),
+  src: local('Pretendard-Light'),
     url('/assets/font/Pretendard-Light.woff2') format('woff2'),
     url('/assets/font/Pretendard-Light.woff') format('woff');
   font-weight: 300;
@@ -30,19 +27,17 @@
 
 @font-face {
   font-family: 'Pretendard';
-  src:
-    local('Pretendard-Regular'),
+  src: local('Pretendard-Regular'),
     url('/assets/font/Pretendard-Regular.woff2') format('woff2'),
     url('/assets/font/Pretendard-Regular.woff') format('woff');
-  font-weight: normal;
+  font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
   font-family: 'Pretendard';
-  src:
-    local('Pretendard-Medium'),
+  src: local('Pretendard-Medium'),
     url('/assets/font/Pretendard-Medium.woff2') format('woff2'),
     url('/assets/font/Pretendard-Medium.woff') format('woff');
   font-weight: 500;
@@ -51,8 +46,7 @@
 
 @font-face {
   font-family: 'Pretendard';
-  src:
-    local('Pretendard-SemiBold'),
+  src: local('Pretendard-SemiBold'),
     url('/assets/font/Pretendard-SemiBold.woff2') format('woff2'),
     url('/assets/font/Pretendard-SemiBold.woff') format('woff');
   font-weight: 600;
@@ -61,19 +55,16 @@
 
 @font-face {
   font-family: 'Pretendard';
-  src:
-    local('Pretendard-Bold'),
+  src: local('Pretendard-Bold'),
     url('/assets/font/Pretendard-Bold.woff2') format('woff2'),
     url('/assets/font/Pretendard-Bold.woff') format('woff');
   font-weight: 700;
-  /* Bold 폰트의 font-weight */
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Pretendard';
-  src:
-    local('Pretendard-ExtraBold'),
+  src: local('Pretendard-ExtraBold'),
     url('/assets/font/Pretendard-ExtraBold.woff2') format('woff2'),
     url('/assets/font/Pretendard-ExtraBold.woff') format('woff');
   font-weight: 800;
